--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,451 @@
-*{box-sizing:border-box}body{border-top:5px solid #c8c6c8;color:#4a484c;font:15px Muli,sans-serif;margin:0 auto;max-width:1260px}body:before{background:#010001;content:"";height:5px;position:absolute;top:0;width:200px}img{display:inline-block;max-width:100%}ul{margin:0;padding:0}li{display:inline-block;list-style:none}a{-webkit-transition:all .1s ease;transition:all .1s ease;text-decoration:none}nav{display:inline-block}h2{margin:0 0 20px}.main{margin:0 auto;width:97%}header{margin:20px 0}header .logo{display:inline-block;vertical-align:middle;width:15%}header nav{margin:0 10%;width:50%}header nav ul{display:flex;padding-left:30px;position:relative}header nav ul a{color:#010001;display:block;text-transform:uppercase}header nav ul a:before{-webkit-transition:all .1s ease;transition:all .1s ease;background:#010001;bottom:-15px;content:"";height:5px;left:0;position:absolute;width:100%}header nav ul a:hover{color:#c8c6c8}header nav ul li:not(:first-child){flex:1;position:relative;text-align:center}header nav ul li:nth-child(3) a:before{background:#4a484c}header nav ul li:nth-child(4) a:before{background:#afacaf}header nav ul li:nth-child(5) a:before{background:#c8c6c8}header nav ul>:first-child{left:0;overflow:hidden;position:absolute;top:13px;width:23px}header nav ul>:first-child a{background:url(../images/sprite.png) -3px -2px;text-indent:-500px}header .social{display:inline-block;width:14%}.social a{background:url(../images/social-sprite.png);display:block;height:27px;margin:0 5px;overflow:hidden;text-indent:-500px;width:20px}.social .facebook a{background-position:-6px -3px}.social .twitter a{background-position:-44px -3px}.social .vine a{background-position:-80px -3px}.social .youtube a{background-position:-114px -3px}footer{margin-top:40px}footer a{color:#fff;text-transform:uppercase}footer a:hover{color:#ccc}footer>div{padding:20px 40px}footer .logo{display:inline-block;width:13%}footer nav{display:inline-block;vertical-align:top;margin:20px 0 0 11%;width:75%}footer nav>ul{display:flex}footer nav>ul>li{flex:1;vertical-align:top}footer nav>ul>li li{display:block;margin:9px 0;position:relative;text-indent:13px}footer nav>ul>li li:before{-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;background:#fff;content:"";height:6px;left:0;margin-top:-3px;position:absolute;top:50%;width:6px}footer .social{margin-top:20px}footer .social a{height:29px;width:29px}footer .social .facebook a{background-position:2px -30px}footer .social .twitter a{background-position:-44px -31px}footer .social .vine a{background-position:-89px -31px}footer .social .youtube a{background-position:-134px -30px}.main-footer{background:#4a484c;border:1px solid #010001}.secondary-footer{background:#c8c6c8;color:#7d7a80;margin-top:10px;text-align:center}.secondary-footer address{font-style:normal}.secondary-footer span{display:block}.banner-menu{margin:40px 0;position:relative;text-align:center}.banner-menu ul{display:flex;height:100%;position:absolute;top:0;width:100%}.banner-menu ul li{bottom:-88%;flex:1;pointer-events:none;position:relative}.banner-menu ul li:before{content:"";height:5px;left:0;position:absolute;top:-88%;width:100%}.banner-menu ul li a{color:#fff;display:block;margin:0 2px;padding:10px;pointer-events:auto;text-transform:uppercase}.banner-menu ul li:first-child a{margin-left:0}.banner-menu ul .taekwon-do:before{background:#53a7b2}.banner-menu ul .taekwon-do a{background:#53a7b2}.banner-menu ul .taekwon-do a:hover{background:#76b9c2}.banner-menu ul .jiu-jitsu:before{background:#f98654}.banner-menu ul .jiu-jitsu a{background:#f98654}.banner-menu ul .jiu-jitsu a:hover{background:#fba985}.banner-menu ul .muay-thai:before{background:#aed24e}.banner-menu ul .muay-thai a{background:#aed24e}.banner-menu ul .muay-thai a:hover{background:#c1dc77}.banner-menu ul .taefit:before{background:#a27db1}.banner-menu ul .taefit a{background:#a27db1}.banner-menu ul .taefit a:hover{background:#b99dc4}.banner-menu ul .yoga:before{background:#a8777b}.banner-menu ul .yoga a{background:#a8777b}.banner-menu ul .yoga a:hover{background:#bc9699}.banner-menu ul .pilates:before{background:#03acec}.banner-menu ul .pilates a{background:#03acec}.banner-menu ul .pilates a:hover{background:#26c1fc}aside{display:inline-block;width:25%}.articles{display:inline-block;width:74%;vertical-align:top}.articles ul{display:flex;width:100%}.articles ul li{flex:1;margin-left:20px}.articles ul li h2{text-transform:uppercase}.articles ul li span{color:#4a484c;display:block;font-size:17px;line-height:1.5;position:relative}.articles ul li span::before{content:"";display:block;height:10px;margin:-4px 0 20px;pointer-events:none;width:100%}.articles ul li span::after{content:"+";font-size:45px;position:absolute;right:0;top:15px}.articles ul li.kids h2{color:#4da9b4}.articles ul li.kids span:before{background:#4da9b4}.articles ul li.kids span::after{color:#4da9b4}.articles ul li.feminina h2{color:#ec2393}.articles ul li.feminina span:before{background:#ec2393}.articles ul li.feminina span::after{color:#ec2393}.articles ul li.grades-de-aula h2{color:#a05849}.articles ul li.grades-de-aula span:before{background:#a05849}.articles ul li.grades-de-aula span::after{color:#a05849}
+@font-face {
+  font-family: 'CenturyGothic';
+  src: url('font/CenturyGothic.eot?#iefix') format('embedded-opentype'), url('font/CenturyGothic.woff') format('woff'), url('font/CenturyGothic.ttf') format('truetype'), url('font/CenturyGothic.svg#CenturyGothic') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+/*variables*/
+/*-------mixins------*/
+/*-------mixins------*/
+* {
+  box-sizing: border-box;
+}
+body {
+  border-top: 5px solid #c8c6c8;
+  color: #4a484c;
+  font: 15px 'CenturyGothic', sans-serif;
+  margin: 0 auto;
+  max-width: 1260px;
+}
+body:before {
+  background: #010001;
+  content: "";
+  height: 5px;
+  position: absolute;
+  top: 0;
+  width: 200px;
+}
+img {
+  display: inline-block;
+  max-width: 100%;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+li {
+  display: inline-block;
+  list-style: none;
+}
+a {
+  -webkit-transition: all 0.1s ease;
+  transition: all 0.1s ease;
+  text-decoration: none;
+}
+nav {
+  display: inline-block;
+}
+h2 {
+  margin: 0 0 20px;
+}
+.container {
+  margin: 0 auto;
+  width: 97%;
+}
+/*-------header------*/
+header {
+  margin: 20px 0;
+}
+header .logo {
+  display: inline-block;
+  vertical-align: middle;
+  width: 15%;
+}
+header nav {
+  margin: 0 6%;
+  width: 60%;
+}
+header nav ul {
+  display: flex;
+  padding-left: 30px;
+  position: relative;
+}
+header nav ul a {
+  display: block;
+}
+header nav ul li:not(:first-child) {
+  flex: 1;
+  position: relative;
+  text-align: center;
+}
+header nav ul li:not(:first-child) a {
+  border-bottom: 5px solid #010001;
+  color: #010001;
+  padding: 10px 0;
+  text-transform: uppercase;
+}
+header nav ul li:not(:first-child) a:hover {
+  background: #010001;
+  color: #ffffff;
+}
+header nav ul li:nth-child(3) a {
+  border-color: #4a484c;
+}
+header nav ul li:nth-child(4) a {
+  border-color: #969296;
+}
+header nav ul li:nth-child(5) a {
+  border-color: #afacaf;
+}
+header nav ul li:nth-child(6) a {
+  border-color: #c8c6c8;
+}
+header nav ul > :first-child {
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 13px;
+  width: 23px;
+}
+header nav ul > :first-child a {
+  background: url("../images/sprite.png") -3px -2px;
+  text-indent: -500px;
+}
+header .social {
+  display: inline-block;
+  width: 11%;
+}
+.social a {
+  background: url("../images/social-sprite.png");
+  display: block;
+  height: 27px;
+  margin: 0 5px;
+  overflow: hidden;
+  text-indent: -500px;
+  width: 20px;
+}
+.social .facebook a {
+  background-position: -6px -3px;
+}
+.social .twitter a {
+  background-position: -44px -3px;
+}
+.social .vine a {
+  background-position: -80px -3px;
+}
+.social .youtube a {
+  background-position: -114px -3px;
+}
+/*-------footer------*/
+footer {
+  margin-top: 40px;
+}
+footer a {
+  color: #ffffff;
+  text-transform: uppercase;
+}
+footer a:hover {
+  color: #cccccc;
+}
+footer > div {
+  padding: 20px 40px;
+}
+footer .logo {
+  display: inline-block;
+  width: 13%;
+}
+footer nav {
+  display: inline-block;
+  vertical-align: top;
+  margin: 20px 0 0 11%;
+  width: 75%;
+}
+footer nav > ul {
+  display: flex;
+}
+footer nav > ul > li {
+  flex: 1;
+  vertical-align: top;
+}
+footer nav > ul > li li {
+  display: block;
+  margin: 9px 0;
+  position: relative;
+  text-indent: 13px;
+}
+footer nav > ul > li li:before {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  background: #ffffff;
+  content: "";
+  height: 6px;
+  left: 0;
+  margin-top: -3px;
+  position: absolute;
+  top: 50%;
+  width: 6px;
+}
+footer .social {
+  margin-top: 20px;
+}
+footer .social a {
+  height: 29px;
+  width: 29px;
+}
+footer .social .facebook a {
+  background-position: 2px -30px;
+}
+footer .social .twitter a {
+  background-position: -44px -31px;
+}
+footer .social .vine a {
+  background-position: -89px -31px;
+}
+footer .social .youtube a {
+  background-position: -134px -30px;
+}
+.main-footer {
+  background: #4a484c;
+  border: 1px solid #010001;
+}
+.secondary-footer {
+  background: #c8c6c8;
+  color: #7d7a80;
+  margin-top: 10px;
+  text-align: center;
+}
+.secondary-footer address {
+  font-style: normal;
+}
+.secondary-footer span {
+  display: block;
+}
+/*-------footer------*/
+/*------home--------*/
+.banner-menu {
+  margin: 40px 0;
+  position: relative;
+  text-align: center;
+}
+.banner-menu ul {
+  display: flex;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+.banner-menu ul li {
+  bottom: -88%;
+  flex: 1;
+  pointer-events: none;
+  position: relative;
+}
+.banner-menu ul li:before {
+  content: "";
+  height: 5px;
+  left: 0;
+  position: absolute;
+  top: -88%;
+  width: 100%;
+}
+.banner-menu ul li a {
+  color: #ffffff;
+  display: block;
+  margin: 0 2px;
+  padding: 10px;
+  pointer-events: auto;
+  text-transform: uppercase;
+}
+.banner-menu ul li:first-child a {
+  margin-left: 0;
+}
+.banner-menu ul .taekwon-do:before {
+  background: #53a7b2;
+}
+.banner-menu ul .taekwon-do a {
+  background: #53a7b2;
+}
+.banner-menu ul .taekwon-do a:hover {
+  background: #76b9c2;
+}
+.banner-menu ul .jiu-jitsu:before {
+  background: #f98654;
+}
+.banner-menu ul .jiu-jitsu a {
+  background: #f98654;
+}
+.banner-menu ul .jiu-jitsu a:hover {
+  background: #fba985;
+}
+.banner-menu ul .muay-thai:before {
+  background: #aed24e;
+}
+.banner-menu ul .muay-thai a {
+  background: #aed24e;
+}
+.banner-menu ul .muay-thai a:hover {
+  background: #c1dc77;
+}
+.banner-menu ul .taefit:before {
+  background: #a27db1;
+}
+.banner-menu ul .taefit a {
+  background: #a27db1;
+}
+.banner-menu ul .taefit a:hover {
+  background: #b99dc4;
+}
+.banner-menu ul .yoga:before {
+  background: #a8777b;
+}
+.banner-menu ul .yoga a {
+  background: #a8777b;
+}
+.banner-menu ul .yoga a:hover {
+  background: #bc9699;
+}
+.banner-menu ul .pilates:before {
+  background: #03acec;
+}
+.banner-menu ul .pilates a {
+  background: #03acec;
+}
+.banner-menu ul .pilates a:hover {
+  background: #26c1fc;
+}
+aside {
+  display: inline-block;
+  width: 25%;
+}
+.articles {
+  display: inline-block;
+  width: 74%;
+  vertical-align: top;
+}
+.articles ul {
+  display: flex;
+  width: 100%;
+}
+.articles ul li {
+  flex: 1;
+  margin-left: 20px;
+}
+.articles ul li h2 {
+  text-transform: uppercase;
+}
+.articles ul li span {
+  color: #4a484c;
+  display: block;
+  font-size: 17px;
+  line-height: 1.5;
+  position: relative;
+}
+.articles ul li span::before {
+  content: "";
+  display: block;
+  height: 10px;
+  margin: -4px 0 20px;
+  pointer-events: none;
+  width: 100%;
+}
+.articles ul li span::after {
+  content: "+";
+  font-size: 45px;
+  position: absolute;
+  right: 0;
+  top: 15px;
+}
+.articles ul li.kids h2 {
+  color: #4da9b4;
+}
+.articles ul li.kids span:before {
+  background: #4da9b4;
+}
+.articles ul li.kids span::after {
+  color: #4da9b4;
+}
+.articles ul li.feminina h2 {
+  color: #ec2393;
+}
+.articles ul li.feminina span:before {
+  background: #ec2393;
+}
+.articles ul li.feminina span::after {
+  color: #ec2393;
+}
+.articles ul li.grades-de-aula h2 {
+  color: #a05849;
+}
+.articles ul li.grades-de-aula span:before {
+  background: #a05849;
+}
+.articles ul li.grades-de-aula span::after {
+  color: #a05849;
+}
+/*-----PODIUM------*/
+.podium li {
+  background: #fafafa;
+  margin: 30px 1%;
+  padding: 20px;
+  text-transform: uppercase;
+  width: 47%;
+}
+.podium li h2 {
+  background: #c8c6c8;
+  font-size: 18px;
+  margin: -50px auto 20px;
+  padding: 5px;
+  position: relative;
+  text-align: center;
+  width: 50%;
+}
+.podium li h2:before,
+.podium li h2:after {
+  border: 33px solid transparent;
+  border-bottom: 31px solid #c8c6c8;
+  color: #c8c6c8;
+  content: "";
+  height: 0;
+  position: absolute;
+  top: -33px;
+  width: 0;
+}
+.podium li h2:before {
+  left: -33px;
+}
+.podium li h2:after {
+  right: -33px;
+}
+.podium li .img-wrapper {
+  display: inline-block;
+  width: 50%;
+}
+.podium li .content {
+  float: right;
+  width: 45%;
+}
+.podium li .content time {
+  border-bottom: 1px solid #c8c6c8;
+  color: #c8c6c8;
+  display: block;
+  font-size: 14px;
+  text-align: right;
+}
+.podium li .content time > :first-child {
+  float: left;
+}
+.podium li .content p {
+  font-size: 18px;
+  font-weight: bold;
+}
+.podium li .content .btn {
+  display: block;
+  background: #010001;
+  color: #ffffff;
+  padding: 5px;
+  text-align: center;
+}
+.podium li .content .btn:hover {
+  background: #4a484c;
+}
