--- a/styles/style.css
+++ b/styles/style.css
@@ -1,574 +1,1 @@
-@font-face {
-  font-family: 'CenturyGothic';
-  src: url('../font/CenturyGothic.eot?#iefix') format('embedded-opentype'), url('../font/CenturyGothic.woff') format('woff'), url('../font/CenturyGothic.ttf') format('truetype'), url('../font/CenturyGothic.svg#CenturyGothic') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-/*variables*/
-/*-------mixins------*/
-/*-------mixins------*/
-* {
-  box-sizing: border-box;
-}
-body {
-  border-top: 5px solid #c8c6c8;
-  color: #4a484c;
-  font: 15px 'CenturyGothic', sans-serif;
-  margin: 0 auto;
-  max-width: 1260px;
-}
-body:before {
-  background: #010001;
-  content: "";
-  height: 5px;
-  position: absolute;
-  top: 0;
-  width: 200px;
-}
-img {
-  display: inline-block;
-  max-width: 100%;
-}
-ul {
-  margin: 0;
-  padding: 0;
-}
-li {
-  display: inline-block;
-  list-style: none;
-}
-a {
-  -webkit-transition: all 0.1s ease;
-  transition: all 0.1s ease;
-  text-decoration: none;
-}
-nav {
-  display: inline-block;
-}
-h2 {
-  margin: 0 0 20px;
-}
-.container {
-  margin: 0 auto;
-  width: 97%;
-}
-.stripped-table {
-  font: 14px Arial, sans-serif;
-}
-.stripped-table th {
-  background: #010001;
-  color: #ffffff;
-  font-weight: normal;
-  padding: 10px 0;
-  text-align: left;
-  text-indent: 10px;
-  text-transform: uppercase;
-}
-.stripped-table td {
-  background: #e1e0e1;
-  text-align: center;
-}
-.stripped-table tr:nth-child(odd) td {
-  background: #c8c6c8;
-}
-/*-------header------*/
-header {
-  margin: 20px 0;
-}
-header .logo {
-  display: inline-block;
-  vertical-align: middle;
-  width: 15%;
-}
-header nav {
-  margin: 0 6%;
-  width: 60%;
-}
-header nav ul {
-  display: flex;
-  padding-left: 30px;
-  position: relative;
-}
-header nav ul a {
-  display: block;
-}
-header nav ul li:not(:first-child) {
-  flex: 1;
-  position: relative;
-  text-align: center;
-}
-header nav ul li:not(:first-child) a {
-  border-bottom: 5px solid #010001;
-  color: #010001;
-  padding: 10px 0;
-  text-transform: uppercase;
-}
-header nav ul li:not(:first-child) a:hover {
-  background: #010001;
-  color: #ffffff;
-}
-header nav ul li:nth-child(3) a {
-  border-color: #4a484c;
-}
-header nav ul li:nth-child(4) a {
-  border-color: #969296;
-}
-header nav ul li:nth-child(5) a {
-  border-color: #afacaf;
-}
-header nav ul li:nth-child(6) a {
-  border-color: #c8c6c8;
-}
-header nav ul > :first-child {
-  left: 0;
-  overflow: hidden;
-  position: absolute;
-  top: 13px;
-  width: 23px;
-}
-header nav ul > :first-child a {
-  background: url("../images/sprite.png") -3px -2px;
-  text-indent: -500px;
-}
-header .social {
-  display: inline-block;
-  width: 11%;
-}
-.social a {
-  background: url("../images/social-sprite.png");
-  display: block;
-  height: 27px;
-  margin: 0 5px;
-  overflow: hidden;
-  text-indent: -500px;
-  width: 20px;
-}
-.social .facebook a {
-  background-position: -6px -3px;
-}
-.social .twitter a {
-  background-position: -44px -3px;
-}
-.social .vine a {
-  background-position: -80px -3px;
-}
-.social .youtube a {
-  background-position: -114px -3px;
-}
-/*-------footer------*/
-footer {
-  margin-top: 40px;
-}
-footer a {
-  color: #ffffff;
-  text-transform: uppercase;
-}
-footer a:hover {
-  color: #cccccc;
-}
-footer > div {
-  padding: 20px 40px;
-}
-footer .logo {
-  display: inline-block;
-  width: 13%;
-}
-footer nav {
-  display: inline-block;
-  vertical-align: top;
-  margin: 20px 0 0 11%;
-  width: 75%;
-}
-footer nav > ul {
-  display: flex;
-}
-footer nav > ul > li {
-  flex: 1;
-  vertical-align: top;
-}
-footer nav > ul > li li {
-  display: block;
-  margin: 9px 0;
-  position: relative;
-  text-indent: 13px;
-}
-footer nav > ul > li li:before {
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  background: #ffffff;
-  content: "";
-  height: 6px;
-  left: 0;
-  margin-top: -3px;
-  position: absolute;
-  top: 50%;
-  width: 6px;
-}
-footer .social {
-  margin-top: 20px;
-}
-footer .social a {
-  height: 29px;
-  width: 29px;
-}
-footer .social .facebook a {
-  background-position: 2px -30px;
-}
-footer .social .twitter a {
-  background-position: -44px -31px;
-}
-footer .social .vine a {
-  background-position: -89px -31px;
-}
-footer .social .youtube a {
-  background-position: -134px -30px;
-}
-.main-footer {
-  background: #4a484c;
-  border: 1px solid #010001;
-}
-.secondary-footer {
-  background: #c8c6c8;
-  color: #7d7a80;
-  margin-top: 10px;
-  text-align: center;
-}
-.secondary-footer address {
-  font-style: normal;
-}
-.secondary-footer span {
-  display: block;
-}
-/*-------footer------*/
-/*------home--------*/
-.banner-menu {
-  margin: 40px 0;
-  position: relative;
-  text-align: center;
-}
-.banner-menu ul {
-  display: flex;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-.banner-menu ul li {
-  bottom: -88%;
-  flex: 1;
-  pointer-events: none;
-  position: relative;
-}
-.banner-menu ul li:before {
-  content: "";
-  height: 5px;
-  left: 0;
-  position: absolute;
-  top: -88%;
-  width: 100%;
-}
-.banner-menu ul li a {
-  color: #ffffff;
-  display: block;
-  margin: 0 2px;
-  padding: 10px;
-  pointer-events: auto;
-  text-transform: uppercase;
-}
-.banner-menu ul li:first-child a {
-  margin-left: 0;
-}
-.banner-menu ul .taekwon-do:before {
-  background: #53a7b2;
-}
-.banner-menu ul .taekwon-do a {
-  background: #53a7b2;
-}
-.banner-menu ul .taekwon-do a:hover {
-  background: #76b9c2;
-}
-.banner-menu ul .jiu-jitsu:before {
-  background: #f98654;
-}
-.banner-menu ul .jiu-jitsu a {
-  background: #f98654;
-}
-.banner-menu ul .jiu-jitsu a:hover {
-  background: #fba985;
-}
-.banner-menu ul .muay-thai:before {
-  background: #aed24e;
-}
-.banner-menu ul .muay-thai a {
-  background: #aed24e;
-}
-.banner-menu ul .muay-thai a:hover {
-  background: #c1dc77;
-}
-.banner-menu ul .taefit:before {
-  background: #a27db1;
-}
-.banner-menu ul .taefit a {
-  background: #a27db1;
-}
-.banner-menu ul .taefit a:hover {
-  background: #b99dc4;
-}
-.banner-menu ul .yoga:before {
-  background: #a8777b;
-}
-.banner-menu ul .yoga a {
-  background: #a8777b;
-}
-.banner-menu ul .yoga a:hover {
-  background: #bc9699;
-}
-.banner-menu ul .pilates:before {
-  background: #03acec;
-}
-.banner-menu ul .pilates a {
-  background: #03acec;
-}
-.banner-menu ul .pilates a:hover {
-  background: #26c1fc;
-}
-aside {
-  display: inline-block;
-  width: 25%;
-}
-.articles {
-  display: inline-block;
-  width: 74%;
-  vertical-align: top;
-}
-.articles ul {
-  display: flex;
-  width: 100%;
-}
-.articles ul li {
-  flex: 1;
-  margin-left: 20px;
-}
-.articles ul li h2 {
-  text-transform: uppercase;
-}
-.articles ul li span {
-  color: #4a484c;
-  display: block;
-  font-size: 17px;
-  line-height: 1.5;
-  position: relative;
-}
-.articles ul li span::before {
-  content: "";
-  display: block;
-  height: 10px;
-  margin: -4px 0 20px;
-  pointer-events: none;
-  width: 100%;
-}
-.articles ul li span::after {
-  content: "+";
-  font-size: 45px;
-  position: absolute;
-  right: 0;
-  top: 15px;
-}
-.articles ul li.kids h2 {
-  color: #4da9b4;
-}
-.articles ul li.kids span:before {
-  background: #4da9b4;
-}
-.articles ul li.kids span::after {
-  color: #4da9b4;
-}
-.articles ul li.feminina h2 {
-  color: #ec2393;
-}
-.articles ul li.feminina span:before {
-  background: #ec2393;
-}
-.articles ul li.feminina span::after {
-  color: #ec2393;
-}
-.articles ul li.grades-de-aula h2 {
-  color: #a05849;
-}
-.articles ul li.grades-de-aula span:before {
-  background: #a05849;
-}
-.articles ul li.grades-de-aula span::after {
-  color: #a05849;
-}
-/*-----PODIUM------*/
-.podium li {
-  background: #fafafa;
-  margin: 30px 1%;
-  padding: 20px;
-  text-transform: uppercase;
-  width: 47%;
-}
-.podium li h2 {
-  background: #c8c6c8;
-  font-size: 18px;
-  margin: -50px auto 20px;
-  padding: 5px;
-  position: relative;
-  text-align: center;
-  width: 50%;
-}
-.podium li h2:before,
-.podium li h2:after {
-  border: 33px solid transparent;
-  border-bottom: 31px solid #c8c6c8;
-  color: #c8c6c8;
-  content: "";
-  height: 0;
-  position: absolute;
-  top: -33px;
-  width: 0;
-}
-.podium li h2:before {
-  left: -33px;
-}
-.podium li h2:after {
-  right: -33px;
-}
-.podium li .img-wrapper {
-  display: inline-block;
-  width: 50%;
-}
-.podium li .content {
-  float: right;
-  width: 45%;
-}
-.podium li .content time {
-  border-bottom: 1px solid #c8c6c8;
-  color: #c8c6c8;
-  display: block;
-  font-size: 14px;
-  text-align: right;
-}
-.podium li .content time > :first-child {
-  float: left;
-}
-.podium li .content p {
-  font-size: 18px;
-  font-weight: bold;
-}
-.podium li .content .btn {
-  display: block;
-  background: #010001;
-  color: #ffffff;
-  padding: 5px;
-  text-align: center;
-}
-.podium li .content .btn:hover {
-  background: #4a484c;
-}
-/*-------GRADE DE AULAS--------*/
-.classes {
-  position: relative;
-}
-.classes img {
-  border: 5px solid #4a484c;
-}
-.classes ul {
-  bottom: 5%;
-  color: #ffffff;
-  padding: 0 10%;
-  position: absolute;
-  width: 100%;
-}
-.classes ul li {
-  background: url("../images/sprite-grade-de-aula.png") no-repeat rgba(0, 0, 0, 0.8);
-  cursor: pointer;
-  border-top: 10px solid;
-  margin: 15px 3%;
-  padding: 20px;
-  width: 27%;
-}
-.classes ul li:hover {
-  background-color: rgba(0, 0, 0, 0.9);
-}
-.classes ul li h2 {
-  font-weight: normal;
-}
-.classes ul li.taekwon-do {
-  border-color: #53a7b2;
-  background-position: 100% 0;
-}
-.classes ul li.jiu-jitsu {
-  border-color: #f98654;
-  background-position: 100% 17.3%;
-}
-.classes ul li.muay-thai {
-  border-color: #aed24e;
-  background-position: 100% 35%;
-}
-.classes ul li.taefit {
-  border-color: #a27db1;
-  background-position: 100% 57%;
-}
-.classes ul li.yoga {
-  border-color: #a8777b;
-  background-position: 100% 78.2%;
-}
-.classes ul li.pilates {
-  border-color: #03acec;
-  background-position: 100% 95%;
-}
-.modal {
-  background: rgba(0, 0, 0, 0.8);
-  display: none;
-  height: 100%;
-  left: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-.modal .close {
-  background: none;
-  border: none;
-  float: right;
-  font-size: 21px;
-  line-height: .5;
-  outline: none;
-}
-.modal .close:hover {
-  color: #c8c6c8;
-}
-.modal .content {
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-  background: #ffffff;
-  margin: 0 auto;
-  padding: 20px;
-  width: 40%;
-}
-.modal .content table {
-  width: 100%;
-}
-.modal.in .content {
-  margin: 10% auto;
-}
-.modal.taekwon-do .content {
-  border-top: 10px solid #53a7b2;
-}
-.modal.jiu-jitsu .content {
-  border-top: 10px solid #f98654;
-}
-.modal.muay-thai .content {
-  border-top: 10px solid #aed24e;
-}
-.modal.taefit .content {
-  border-top: 10px solid #a27db1;
-}
-.modal.yoga .content {
-  border-top: 10px solid #a8777b;
-}
-.modal.pilates .content {
-  border-top: 10px solid #03acec;
-}
+@font-face{font-family:CenturyGothic;src:url(../font/CenturyGothic.eot?#iefix) format('embedded-opentype'),url(../font/CenturyGothic.woff) format('woff'),url(../font/CenturyGothic.ttf) format('truetype'),url(../font/CenturyGothic.svg#CenturyGothic) format('svg');font-weight:400;font-style:normal}*{box-sizing:border-box}body{border-top:5px solid #c8c6c8;color:#4a484c;font:15px CenturyGothic,sans-serif;margin:0 auto;max-width:1260px}body:before{background:#010001;content:"";height:5px;position:absolute;top:0;width:200px}img{display:inline-block;max-width:100%}ul{margin:0;padding:0}li{display:inline-block;list-style:none}a{-webkit-transition:all .1s ease;transition:all .1s ease;text-decoration:none}nav{display:inline-block}h2{margin:0 0 20px}.container{margin:0 auto;width:97%}.stripped-table{font:14px Arial,sans-serif}.stripped-table th{background:#010001;color:#fff;font-weight:400;padding:10px 0;text-align:left;text-indent:10px;text-transform:uppercase}.stripped-table td{background:#e1e0e1;text-align:center}.stripped-table tr:nth-child(odd) td{background:#c8c6c8}header{margin:20px 0}header .logo{display:inline-block;vertical-align:middle;width:15%}header nav{margin:0 6%;width:60%}header nav ul{display:flex;padding-left:30px;position:relative}header nav ul a{display:block}header nav ul li:not(:first-child){flex:1;position:relative;text-align:center}header nav ul li:not(:first-child) a{border-bottom:5px solid #010001;color:#010001;padding:10px 0;text-transform:uppercase}header nav ul li:not(:first-child) a:hover{background:#010001;color:#fff}header nav ul li:nth-child(3) a{border-color:#4a484c}header nav ul li:nth-child(4) a{border-color:#969296}header nav ul li:nth-child(5) a{border-color:#afacaf}header nav ul li:nth-child(6) a{border-color:#c8c6c8}header nav ul>:first-child{left:0;overflow:hidden;position:absolute;top:13px;width:23px}header nav ul>:first-child a{background:url(../images/sprite.png) -3px -2px;text-indent:-500px}header .social{display:inline-block;width:11%}.social a{background:url(../images/social-sprite.png);display:block;height:27px;margin:0 5px;overflow:hidden;text-indent:-500px;width:20px}.social .facebook a{background-position:-6px -3px}.social .twitter a{background-position:-44px -3px}.social .vine a{background-position:-80px -3px}.social .youtube a{background-position:-114px -3px}footer{margin-top:40px}footer a{color:#fff;text-transform:uppercase}footer a:hover{color:#ccc}footer>div{padding:20px 40px}footer .logo{display:inline-block;width:13%}footer nav{display:inline-block;vertical-align:top;margin:20px 0 0 11%;width:75%}footer nav>ul{display:flex}footer nav>ul>li{flex:1;vertical-align:top}footer nav>ul>li li{display:block;margin:9px 0;position:relative;text-indent:13px}footer nav>ul>li li:before{-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;background:#fff;content:"";height:6px;left:0;margin-top:-3px;position:absolute;top:50%;width:6px}footer .social{margin-top:20px}footer .social a{height:29px;width:29px}footer .social .facebook a{background-position:2px -30px}footer .social .twitter a{background-position:-44px -31px}footer .social .vine a{background-position:-89px -31px}footer .social .youtube a{background-position:-134px -30px}.main-footer{background:#4a484c;border:1px solid #010001}.secondary-footer{background:#c8c6c8;color:#7d7a80;margin-top:10px;text-align:center}.secondary-footer address{font-style:normal}.secondary-footer span{display:block}.banner-menu{margin:40px 0;position:relative;text-align:center}.banner-menu ul{display:flex;height:100%;position:absolute;top:0;width:100%}.banner-menu ul li{bottom:-88%;flex:1;pointer-events:none;position:relative}.banner-menu ul li:before{content:"";height:5px;left:0;position:absolute;top:-88%;width:100%}.banner-menu ul li a{color:#fff;display:block;font-size:26px;margin:0 2px;padding:10px;pointer-events:auto;text-transform:uppercase}.banner-menu ul li:first-child a{margin-left:0}.banner-menu ul .taekwon-do a,.banner-menu ul .taekwon-do:before{background:#53a7b2}.banner-menu ul .taekwon-do a:hover{background:#76b9c2}.banner-menu ul .jiu-jitsu a,.banner-menu ul .jiu-jitsu:before{background:#f98654}.banner-menu ul .jiu-jitsu a:hover{background:#fba985}.banner-menu ul .muay-thai a,.banner-menu ul .muay-thai:before{background:#aed24e}.banner-menu ul .muay-thai a:hover{background:#c1dc77}.banner-menu ul .taefit a,.banner-menu ul .taefit:before{background:#a27db1}.banner-menu ul .taefit a:hover{background:#b99dc4}.banner-menu ul .yoga a,.banner-menu ul .yoga:before{background:#a8777b}.banner-menu ul .yoga a:hover{background:#bc9699}.banner-menu ul .pilates a,.banner-menu ul .pilates:before{background:#03acec}.banner-menu ul .pilates a:hover{background:#26c1fc}aside{display:inline-block;width:25%}.articles{display:inline-block;width:74%;vertical-align:top}.articles ul{display:flex;width:100%}.articles ul li{flex:1;margin-left:20px}.articles ul li h2{text-transform:uppercase}.articles ul li span{color:#4a484c;display:block;font-size:17px;line-height:1.5;position:relative}.articles ul li span::before{content:"";display:block;height:10px;margin:-4px 0 20px;pointer-events:none;width:100%}.articles ul li span::after{content:"+";font-size:45px;position:absolute;right:0;top:15px}.articles ul li.kids h2{color:#4da9b4}.articles ul li.kids span:before{background:#4da9b4}.articles ul li.kids span::after{color:#4da9b4}.articles ul li.feminina h2{color:#ec2393}.articles ul li.feminina span:before{background:#ec2393}.articles ul li.feminina span::after{color:#ec2393}.articles ul li.grades-de-aula h2{color:#a05849}.articles ul li.grades-de-aula span:before{background:#a05849}.articles ul li.grades-de-aula span::after{color:#a05849}.podium li{background:#fafafa;margin:30px 1%;padding:20px;text-transform:uppercase;width:47%}.podium li h2{background:#c8c6c8;font-size:18px;margin:-50px auto 20px;padding:5px;position:relative;text-align:center;width:50%}.podium li h2:after,.podium li h2:before{border:33px solid transparent;border-bottom:31px solid #c8c6c8;color:#c8c6c8;content:"";height:0;position:absolute;top:-33px;width:0}.podium li h2:before{left:-33px}.podium li h2:after{right:-33px}.podium li .img-wrapper{display:inline-block;width:50%}.podium li .content{float:right;width:45%}.podium li .content time{border-bottom:1px solid #c8c6c8;color:#c8c6c8;display:block;font-size:14px;text-align:right}.podium li .content time>:first-child{float:left}.podium li .content p{font-size:18px;font-weight:700}.podium li .content .btn{display:block;background:#010001;color:#fff;padding:5px;text-align:center}.podium li .content .btn:hover{background:#4a484c}.classes{position:relative}.classes img{border:5px solid #4a484c}.classes ul{bottom:5%;color:#fff;padding:0 10%;position:absolute;width:100%}.classes ul li{background:url(../images/sprite-grade-de-aula.png) no-repeat rgba(0,0,0,.8);cursor:pointer;border-top:10px solid;margin:15px 3%;padding:20px;width:27%}.classes ul li:hover{background-color:rgba(0,0,0,.9)}.classes ul li h2{font-weight:400}.classes ul li.taekwon-do{border-color:#53a7b2;background-position:100% 0}.classes ul li.jiu-jitsu{border-color:#f98654;background-position:100% 17.3%}.classes ul li.muay-thai{border-color:#aed24e;background-position:100% 35%}.classes ul li.taefit{border-color:#a27db1;background-position:100% 57%}.classes ul li.yoga{border-color:#a8777b;background-position:100% 78.2%}.classes ul li.pilates{border-color:#03acec;background-position:100% 95%}.modal{background:rgba(0,0,0,.8);display:none;height:100%;left:0;position:fixed;top:0;width:100%}.modal .close{background:0 0;border:none;float:right;font-size:21px;line-height:.5;outline:0}.modal .close:hover{color:#c8c6c8}.modal .content{-webkit-transition:all .5s ease;transition:all .5s ease;background:#fff;margin:0 auto;padding:20px;width:40%}.modal .content table{width:100%}.modal.in .content{margin:10% auto}.modal.taekwon-do .content{border-top:10px solid #53a7b2}.modal.jiu-jitsu .content{border-top:10px solid #f98654}.modal.muay-thai .content{border-top:10px solid #aed24e}.modal.taefit .content{border-top:10px solid #a27db1}.modal.yoga .content{border-top:10px solid #a8777b}.modal.pilates .content{border-top:10px solid #03acec}
