--- a/styles/style.less
+++ b/styles/style.less
@@ -307,6 +307,7 @@ footer {
       a {
         color: @invert-color;
         display: block;
+        font-size: 26px;
         margin: 0 2px;
         padding: 10px;
         pointer-events: auto;
