--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,11 @@ nav {
   display: inline-block;
 }
 h2 {
+  font-weight: normal;
   margin: 0 0 20px;
+}
+h1 {
+  font-weight: normal;
 }
 .container {
   margin: 0 auto;
@@ -595,20 +599,24 @@ aside {
 }
 .main.modalities .banner-menu .info {
   color: #ffffff;
-  left: 0;
+  left: 2.5%;
   padding: 60px;
   position: absolute;
   text-align: left;
   top: 0;
+  width: 95%;
 }
 .main.modalities .banner-menu .info h1 {
   font-size: 60px;
   margin: 0;
+  text-shadow: -2px 4px 2px rgba(2, 4, 0, 0.75);
   text-transform: uppercase;
 }
 .main.modalities .banner-menu .info button {
   border: none;
   color: #ffffff;
+  cursor: pointer;
+  font-size: 20px;
   right: 60px;
   padding: 10px;
   position: absolute;
@@ -622,6 +630,7 @@ aside {
 .main.modalities .banner-menu .info .box .column {
   display: inline-block;
   padding: 0 30px;
+  vertical-align: top;
   width: 49%;
 }
 .main.modalities .banner-menu .info .box h2 {
@@ -631,19 +640,78 @@ aside {
 .main.modalities .banner-menu .info .box .benefits {
   background: #cccccd;
   color: #4a484c;
-  padding: 20px;
+  font-size: 16px;
+  padding: 10px 20px;
   text-align: center;
   text-transform: uppercase;
 }
 .main.modalities .banner-menu .info .calories-spent {
   color: #ffffff;
 }
-.jiu-jitsu .banner-menu .info h1 {
+.main.modalities .banner-menu .info .calories-spent span {
+  background: url("../images/sprite.png") no-repeat;
+  display: inline-block;
+  font-size: 26px;
+  height: 80px;
+  margin-bottom: 20px;
+  padding: 10px 20px 10px 70px;
+  text-align: center;
+  width: 45%;
+}
+.main.modalities .banner-menu .info .calories-spent span em {
+  display: block;
+  font-style: normal;
+  text-align: center;
+}
+.main.modalities .banner-menu .info .calories-spent .time {
+  background-position: 0 -44px;
+}
+.main.modalities .banner-menu .info .calories-spent .calories {
+  background-position: 0 -163px;
+  float: right;
+  margin-left: 20px;
+  position: relative;
+}
+.main.modalities .banner-menu .info .calories-spent .calories:before {
+  content: "=";
+  font-size: 24px;
+  left: -15%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.main.modalities .gallery {
+  padding-left: 60px;
+  position: relative;
+}
+.main.modalities .gallery h2 {
+  color: #ffffff;
+  left: -30px;
+  transform: rotate(-90deg);
+  position: absolute;
+  top: 40px;
+  width: 120px;
+}
+#owl-demo .item {
+  margin: 3px;
+}
+#owl-demo .item img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.jiu-jitsu.main.modalities .banner-menu .info h1 {
   color: #f98654;
 }
-.jiu-jitsu .banner-menu .info button {
+.jiu-jitsu.main.modalities .banner-menu .info button {
   background: #f98654;
 }
-.jiu-jitsu .banner-menu .info .calories-spent span {
+.jiu-jitsu.main.modalities .banner-menu .info button:hover {
+  background: #fa976d;
+}
+.jiu-jitsu.main.modalities .banner-menu .info .calories-spent span {
+  background-color: #f98654;
+}
+.jiu-jitsu.main.modalities .gallery h2 {
   background: #f98654;
 }
