--- a/styles/style.less
+++ b/styles/style.less
@@ -563,6 +563,7 @@ aside {
       }
       h2 {
         font-weight: normal;
+        margin: 30px 0;
       }
       &.taekwon-do {
         border-color: @taekwondo-color;
@@ -928,6 +929,116 @@ aside {
     background-color: @jiujitsu-color;
     &:before {
       border-bottom-color: @jiujitsu-color;
+    }
+  }
+}
+.taekwon-do.main.modalities {
+  .banner-menu .info {
+    h1 {
+      color: @taekwondo-color;
+    }
+    button {
+      background: @taekwondo-color;
+      &:hover {
+        background: lighten(@taekwondo-color, 5);
+      }
+    }
+    .calories-spent span {
+      background-color: @taekwondo-color;
+    }
+  }
+  .gallery h2 {
+    background-color: @taekwondo-color;
+    &:before {
+      border-bottom-color: @taekwondo-color;
+    }
+  }
+}
+.muay-thai.main.modalities {
+  .banner-menu .info {
+    h1 {
+      color: @muaythai-color;
+    }
+    button {
+      background: @muaythai-color;
+      &:hover {
+        background: lighten(@muaythai-color, 5);
+      }
+    }
+    .calories-spent span {
+      background-color: @muaythai-color;
+    }
+  }
+  .gallery h2 {
+    background-color: @muaythai-color;
+    &:before {
+      border-bottom-color: @muaythai-color;
+    }
+  }
+}
+.taefit.main.modalities {
+  .banner-menu .info {
+    h1 {
+      color: @taefit-color;
+    }
+    button {
+      background: @taefit-color;
+      &:hover {
+        background: lighten(@taefit-color, 5);
+      }
+    }
+    .calories-spent span {
+      background-color: @taefit-color;
+    }
+  }
+  .gallery h2 {
+    background-color: @taefit-color;
+    &:before {
+      border-bottom-color: @taefit-color;
+    }
+  }
+}
+.yoga.main.modalities {
+  .banner-menu .info {
+    h1 {
+      color: @yoga-color;
+    }
+    button {
+      background: @yoga-color;
+      &:hover {
+        background: lighten(@yoga-color, 5);
+      }
+    }
+    .calories-spent span {
+      background-color: @yoga-color;
+    }
+  }
+  .gallery h2 {
+    background-color: @yoga-color;
+    &:before {
+      border-bottom-color: @yoga-color;
+    }
+  }
+}
+.pilates.main.modalities {
+  .banner-menu .info {
+    h1 {
+      color: @pilates-color;
+    }
+    button {
+      background: @pilates-color;
+      &:hover {
+        background: lighten(@pilates-color, 5);
+      }
+    }
+    .calories-spent span {
+      background-color: @pilates-color;
+    }
+  }
+  .gallery h2 {
+    background-color: @pilates-color;
+    &:before {
+      border-bottom-color: @pilates-color;
     }
   }
 }
